--- a/index.html
+++ b/index.html
@@ -62,29 +62,42 @@
       <section class="skills-section grid-container">
         <div class="skills-title">
           <p class="title">Skills</p>
-          <div class="skills-content">
-            <div class="list">
-            <ul>
-              <li>Languages</li>
+        </div>
+        <div class="skills-content">
+          <div>
+            <ul class="list">
+              <li class="list-title">Languages</li>
               <li>JavaScript (ES6)</li>
               <li>HTML</li>
               <li>CSS</li>
               <li>Python</li>
             </ul>
-            </div>
-            <div class="list">
-              <li>Frameworks</li>
-              <li>React (Learning)</li>
-              <li>Node (Learning)</li>
+          </div>
+          <div>
+            <ul class="list">
+              <li class="list-title">Frameworks</li>
+              <li>React (In Progress 🛠)</li>
+              <li>Node (In Progress 🛠)</li>
               <li>Wordpress</li>
-            </div>
-            <div class="list">
-              <li>Tools</li>
+            </ul>
+          </div>
+          <div>
+            <ul class="list">
+              <li class="list-title">Tools</li>
               <li>Bash</li>
               <li>Git and Github</li>
               <li>Chrome Dev Tools</li>
-            </div>
+            </ul>
           </div>
+        </div>
+      </section>
+      <section class="projects-section grid-container">
+        <div class="projects-title">
+          <p class="title">Featured Projects</p>
+        </div>
+        <div class="projects-content">
+          <div></div>
+        </div>
       </section>
     </main>
   </body>
