--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <body>
     <main>
       <section class="intro-section">
-        <p class="intro-greeting">Hey!<span> 👋</span></p>
+        <p class="intro-greeting">Hey! <span>👋</span></p>
         <p class="intro-description">
           I'm <span class="name">Hussain Ali</span>, an aspiring front-end
           software engineer passionate about creating dynamic and engaging
@@ -84,6 +84,7 @@
           <div>
             <ul class="list">
               <li class="list-title">Tools</li>
+              <li>Parcel</li>
               <li>Bash</li>
               <li>Git and Github</li>
               <li>Chrome Dev Tools</li>
@@ -96,7 +97,72 @@
           <p class="title">Featured Projects</p>
         </div>
         <div class="projects-content">
-          <div></div>
+          <div class="slider-component" data-icon="up-arrow">
+            <div class="slider slider-1">
+              <div class="slider-items flex-container">
+                <div class="img-slider">
+                  <img
+                    src="./imgs/omnifood-screenshot.jpg"
+                    alt="omnifood-screenshot"
+                  />
+                </div>
+                <div class="slider-content">
+                  <h2 class="slider-header">Omnifood Website</h2>
+                  <p class="slider-description">
+                    A mock food subscription website that implements responsive
+                    web-design techniques.
+                  </p>
+                </div>
+              </div>
+            </div>
+            <div class="slider slider-2">
+              <div class="slider-items flex-container">
+                <div class="img-slider">
+                  <img
+                    src="./imgs/calculator-screenshot.jpg"
+                    alt="calculator"
+                  />
+                </div>
+                <div class="slider-content">
+                  <h2 class="slider-header">Online Calculator</h2>
+                  <p class="slider-description">
+                    A basic 4 function calculator implementing basic JavaScript
+                    logic.
+                  </p>
+                </div>
+              </div>
+            </div>
+            <div class="slider slider-3">
+              <div class="slider-items flex-container">
+                <div class="img-slider">
+                  <img src="./imgs/dice-game-screenshot.png" alt="dice-game" />
+                </div>
+                <div class="slider-content">
+                  <h2 class="slider-header">Dice Game</h2>
+                  <p class="slider-description">
+                    A 2 player dice game. First player to reach 100 wins!
+                  </p>
+                </div>
+              </div>
+            </div>
+            <button class="btn-slider-up">
+              <img
+                src="./imgs/arrow-up-outline.svg"
+                alt="arrow-up"
+                width="55px"
+                height="55px"
+              />
+            </button>
+            <button class="btn-slider-down">
+              <img
+                src="./imgs/arrow-down-outline.svg"
+                alt="arrow-down"
+                width="55px"
+                height="55px"
+              />
+            </button>
+            <div class="dots"></div>
+          </div>
         </div>
       </section>
     </main>
