--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 
     <link rel="stylesheet" href="./css/styles.css" />
     <link rel="stylesheet" type="text/css" href="./css/keyframes.css" />
+    <script src="https://unpkg.com/scrollreveal"></script>
     <script defer src="script.js"></script>
   </head>
   <body>
