add tablet and mobile design

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 
     <link rel="stylesheet" href="./css/styles.css" />
     <link rel="stylesheet" type="text/css" href="./css/keyframes.css" />
+    <link rel="stylesheet" href="css/queries.css" />
     <script src="https://unpkg.com/scrollreveal"></script>
     <script defer src="script.js"></script>
   </head>
@@ -48,7 +49,7 @@
         </p>
       </section>
       <section class="background-section grid-container">
-        <div class="background-title">
+        <div class="background-title section-title">
           <p class="title">Background</p>
         </div>
         <div class="background-content">
@@ -72,7 +73,7 @@
         </div>
       </section>
       <section class="skills-section grid-container">
-        <div class="skills-title">
+        <div class="skills-title section-title">
           <p class="title">Skills</p>
         </div>
         <div class="skills-content">
@@ -105,7 +106,7 @@
         </div>
       </section>
       <section class="projects-section grid-container">
-        <div class="projects-title">
+        <div class="projects-title section-title">
           <p class="title">Featured Projects</p>
         </div>
         <div class="projects-content">
@@ -165,16 +166,14 @@
             <img
               src="./imgs/arrow-up-outline.svg"
               alt="arrow-up"
-              width="45px"
-              height="45px"
+              class="arrow-up"
             />
           </button>
           <button class="btn-slider-down">
             <img
               src="./imgs/arrow-down-outline.svg"
               alt="arrow-down"
-              width="45px"
-              height="45px"
+              class="arrow-down"
             />
           </button>
           <div class="dots"></div>
